Video input on Android (#23)
* add Java functions to load video and frames

* Add a new VideoInput module and refactor AndroidCameraModule under AndroidCamera

* Add VideoInput module

* Works with full buffer - not ring buffer

* Add missing header

* Overall structure for FetchEngine

* Add delegates and mock java calls

* Works on Android :)

* Add code to preview video on screen - but buggy...

* Allow proper video display and rename BlockFrameCnt to BatchFrameCnt

* Fix indexing to make object detection work

* Copy from non-YUV frames allowed

* Fix bug in NMS

* Add code for retrieving landmarks

* Comments resolved

* Indentation fix

--- a/AndroidCamera/AndroidCamera.uplugin
+++ b/AndroidCamera/AndroidCamera.uplugin
@@ -19,6 +19,11 @@
 			"Name": "AndroidCamera",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "VideoInput",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	]
 }
